[gd_scene load_steps=3 format=3 uid="uid://bwfgfpdbough3"]

[ext_resource type="Script" path="res://scenes/game_over_screan.gd" id="1_wp8jv"]

[sub_resource type="LabelSettings" id="LabelSettings_2o4qn"]
font_size = 38

[node name="GameOverScrean" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wp8jv")

[node name="Label" type="Label" parent="."]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.208
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -109.0
offset_top = 0.216003
offset_right = 118.0
offset_bottom = 24.536
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
label_settings = SubResource("LabelSettings_2o4qn")
uppercase = true

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -91.0
offset_right = 47.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
text = "Restart"

[node name="Button2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -56.0
offset_right = 48.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
text = "Main Menu"

[node name="Button3" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -20.0
offset_right = 48.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
text = "Quit"

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="Button3" to="." method="_on_button_3_button_down"]
